--- a/supervised_learning/Perceptron_Penguins.ipynb
+++ b/supervised_learning/Perceptron_Penguins.ipynb
@@ -5,7 +5,7 @@
    "id": "161bbeae",
    "metadata": {},
    "source": [
-    "# 🧠 Perceptron Classifier on the Penguins Dataset\n",
+    "#  Perceptron Classifier on the Penguins Dataset\n",
     "In this notebook, we implement and evaluate the **Perceptron algorithm**, one of the foundational methods in machine learning for binary classification tasks.\n",
     "\n",
     "We apply it to a subset of the **Palmer Penguins dataset**, using it to distinguish between **Adelie** and **Gentoo** penguin species based on physical characteristics."
@@ -16,8 +16,8 @@
    "id": "ce89930d",
    "metadata": {},
    "source": [
-    "## 📌 What is a Perceptron?\n",
-    "A **Perceptron** is the simplest type of artificial neural network, introduced by Frank Rosenblatt in 1958. It models a single neuron that:\n",
+    "##  What is a Perceptron?\n",
+    "A **Perceptron** is the simplest type of artificial neural network. It models a single neuron that:\n",
     "- Takes several binary or continuous inputs\n",
     "- Applies a set of weights and bias\n",
     "- Outputs a decision (0 or 1) based on a linear combination followed by a step function\n",
@@ -30,7 +30,7 @@
    "id": "e478fe7c",
    "metadata": {},
    "source": [
-    "## 🐧 Task Overview\n",
+    "##  Understanding Our Dataset\n",
     "We will classify penguins as **Adelie** (label 0) or **Gentoo** (label 1), using the following features:\n",
     "- Bill Length\n",
     "- Bill Depth\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "d20cbf54",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
    "id": "77f13df3",
    "metadata": {},
    "source": [
-    "## 📥 Load and Prepare Data"
+    "##  Load and Prepare Data"
    ]
   },
   {
@@ -194,7 +194,7 @@
    "id": "e37695a5",
    "metadata": {},
    "source": [
-    "### 🔍 Quick Look at Data Distribution"
+    "###  Quick Look at Data Distribution"
    ]
   },
   {
@@ -225,7 +225,7 @@
    "id": "f5db73ab",
    "metadata": {},
    "source": [
-    "## ⚙️ Feature Selection and Normalization"
+    "##  Feature Selection and Normalization"
    ]
   },
   {
@@ -248,7 +248,7 @@
    "id": "6d7cfedf",
    "metadata": {},
    "source": [
-    "## 🛠️ Perceptron Implementation"
+    "##  Perceptron Implementation"
    ]
   },
   {
@@ -275,7 +275,7 @@
    "id": "eeff286d",
    "metadata": {},
    "source": [
-    "## 📊 Evaluate Performance"
+    "##  Evaluate Performance"
    ]
   },
   {
@@ -332,7 +332,7 @@
    "id": "bec86391",
    "metadata": {},
    "source": [
-    "## 🌀 Visualize Decision Boundary with PCA\n",
+    "##  Visualize Decision Boundary with PCA\n",
     "Since we have 4 features, we'll use PCA to reduce to 2D for visualization."
    ]
   },
@@ -370,7 +370,7 @@
    "id": "caefa30d",
    "metadata": {},
    "source": [
-    "## ✅ Conclusion\n",
+    "##  Takeaways\n",
     "- The Perceptron achieved high accuracy on this task because Adelie and Gentoo penguins are **linearly separable**.\n",
     "- While effective here, the Perceptron may struggle on more complex datasets.\n",
     "- Later models like **Logistic Regression** or **Neural Networks** generalize better to nonlinear problems."
