Added logistic regression and linear
Added logistic regression and linear

--- a/supervised_learning/Perceptron_hearts.ipynb
+++ b/supervised_learning/Perceptron_hearts.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  Perceptron Classifier on the Penguins Dataset\n",
+    "#  Perceptron Classifier on the Hearts Dataset\n",
     "In this notebook, we implement and evaluate the **Perceptron algorithm**, one of the foundational methods in machine learning for binary classification tasks.\n",
     "\n",
     "We apply it to a subset of the **Hearts dataset**, using it to predict the occurrence of heart disease in **Males that Excercise regularly** based on the given data"
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,8 +335,7 @@
     "filtered_df = filtered_df[selected_columns].reset_index(drop=True)\n",
     "\n",
     "X = filtered_df[filtered_df.columns.drop(['HeartDisease'])].values\n",
-    "y = filtered_df['HeartDisease'].values\n",
-    "# y=np.where(y==0,-1,1)\n"
+    "y = filtered_df['HeartDisease'].values\n"
    ]
   },
   {
