--- a/supervised_learning/Perceptron_Penguins_new.ipynb
+++ b/supervised_learning/Perceptron_Penguins_new.ipynb
@@ -110,6 +110,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train the Perceptron and Evaluate Accuracy\n",
+    "This cell trains the Perceptron model using the training data and evaluates its performance on the test data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 87,
    "metadata": {},
@@ -129,6 +137,13 @@
     "y_pred = perceptron.predict(X_test)\n",
     "accuracy = np.mean(y_pred == y_test)\n",
     "print(f\"Test Accuracy: {accuracy * 100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Actual Vs Predicted Plot"
    ]
   },
   {
@@ -181,6 +196,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot Training Errors\n",
+    "We can plot the number of miscalculations made each iteration of the perceptron. Generally, we see that the errors(miscalculations) fluctuate a lot and eventually reach a minimum of about 52 miscalculations at somewhere around the 800-1000th iteration.\n",
+    "\n",
+    "This shows that our Perceptron is not completely accurate in classifying penguins as either **Adeile** or **Gentoo** but will classify them correctly most of the time as the average number if miscalculations is somewhere around the 70s which is small compared the number of patients"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 94,
    "metadata": {},
@@ -204,6 +229,13 @@
     "plt.xlabel('Epochs')\n",
     "plt.ylabel('Number of misclassifications')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot a Decision boundary"
    ]
   },
   {
@@ -252,6 +284,23 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Conclusion\n",
+    "\n",
+    "In this notebook, we explored a Perceptron-based classification model to classify penguins among two types: **Adeile** or **Gentoo**  \n",
+    "We focused particularly on visualizing the decision boundary of the model over two important features: **Flipper Length** and **Bill_Length**.\n",
+    "\n",
+    "The decision Boundary — reveal the strengths and limitations of the Perceptron model:\n",
+    "- The model is able to capture some patterns in the data, especially for clearly separable cases.\n",
+    "- However, due to the linear nature of the Perceptron, it struggles with more complex, overlapping data distributions.\n",
+    "\n",
+    "Because this dataset is linearly separable, our decision boundary was able to nearly correctly classify the penguins.\n"
    ]
   }
  ],
