--- a/supervised_learning/Perceptron_hearts.ipynb
+++ b/supervised_learning/Perceptron_hearts.ipynb
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -384,6 +384,16 @@
     "y_pred = perceptron.predict(X_test)\n",
     "accuracy = np.mean(y_pred == y_test)\n",
     "print(f\"Test Accuracy: {accuracy * 100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot Training Errors\n",
+    "We can plot the number of miscalculations made each iteration of the perceptron. Generally, we see that the errors(miscalculations) fluctuate a lot and eventually reach a minimum of about 34 miscalculations at somewhere around the 950th iteration.\n",
+    "\n",
+    "This shows that our Perceptron is not completely accurate in predicting the occurrences of heart disease in patients but will predict correctly most of the time as the average number if miscalculations is somewhere around the 40s which is small compared the number of patients"
    ]
   },
   {
@@ -410,6 +420,13 @@
     "plt.xlabel('Epochs')\n",
     "plt.ylabel('Number of misclassifications')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Actual Vs Predicted Plot"
    ]
   },
   {
@@ -471,7 +488,7 @@
     "## Conclusion\n",
     "\n",
     "In this notebook, we explored a Perceptron-based classification model to predict the presence of heart disease using key patient features.  \n",
-    "We focused particularly on visualizing the decision boundary of the model over two important features: **MaxHR (Maximum Heart Rate)** and **Age**.\n",
+    "We focused particularly on visualizing the side-by-side scatter plots of actual vs. predicted labels over two important features: **MaxHR (Maximum Heart Rate)** and **Age**.\n",
     "\n",
     "The side-by-side scatter plots of actual vs. predicted labels — reveal the strengths and limitations of the Perceptron model:\n",
     "- The model is able to capture some patterns in the data, especially for clearly separable cases.\n",
